--- a/components/game/GameOptions.module.scss
+++ b/components/game/GameOptions.module.scss
@@ -1,4 +1,17 @@
 .GameOptions {
-  background-color: black;
+  background-color: gray;
   color: yellow;
+
+  & > * {
+    outline: rgb(225, 126, 225) 1px dashed;
+  }
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: flex-start;
+
+  label {
+    background-color: pink;
+  }
 }
