create NamePlayers component and name folder

--- a/components/game/GameOptions.module.scss
+++ b/components/game/GameOptions.module.scss
@@ -6,6 +6,8 @@
     outline: rgb(225, 126, 225) 1px dashed;
   }
 
+  position: relative;
+
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
