fill in human player names

--- a/components/name/NamePlayers.module.scss
+++ b/components/name/NamePlayers.module.scss
@@ -6,7 +6,16 @@
   padding: 0.5rem;
 
   position: absolute;
-  top: 50%;
+  top: 25%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  form {
+    background-color: aliceblue;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
 }
