--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -1,8 +1,8 @@
 .Header {
-  background-color: lightgreen;
+  background-color: hsl(240, 64%, 78%);
 
   h1 {
-    background-color: lightblue;
+    background-color: hsl(240, 77%, 60%);
     width: fit-content;
     margin-inline: auto;
   }
