--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -1,8 +1,9 @@
 .Layout {
-  background-color: lightgray;
+  background-color: hsl(240, 77%, 43%);
   padding: 1rem;
 
   main {
-    background-color: lightcoral;
+    padding: 0.5rem;
+    background-color: hsl(240, 90%, 90%);
   }
 }
