--- a/components/name/PlayerNames.module.scss
+++ b/components/name/PlayerNames.module.scss
@@ -1,4 +1,4 @@
-.NamePlayers {
+.PlayerNames {
   background-color: hsl(0, 100%, 50%);
   border: 0.25rem solid hsl(0, 50%, 30%);
   border-radius: 0.25rem;
