--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -6,4 +6,22 @@
     width: fit-content;
     margin-inline: auto;
   }
+
+  nav {
+    background-color: hsl(240, 64%, 25%);
+    padding: 0.5rem;
+
+    ul {
+      background-color: hsl(240, 64%, 98%);
+      padding: 1rem;
+
+      display: flex;
+      flex-direction: row;
+      gap: 2rem;
+
+      li {
+        background-color: hsl(210, 64%, 90%);
+      }
+    }
+  }
 }
