--- a/components/scoreboard/Scoreboard.module.scss
+++ b/components/scoreboard/Scoreboard.module.scss
@@ -1,3 +1,12 @@
 .Scoreboard {
   background-color: hsl(271, 63%, 63%);
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    background-color: hsl(271, 71%, 24%);
+    padding: 0.5rem;
+  }
 }
